[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ringvote"
version = "0.1.1"
authors = [
    { name="Celeste Ma", email="gerry.y.ma@gmail.com" },
]
description = "An anonymous voting system utilizing ring signatures."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "crypto-otrs @ git+https://github.com/MtCelesteMa/my-cryptography.git#subdirectory=py-OTRS",
    "protobuf"
]

[project.scripts]
ringvote = "ringvote.cli.user:cli"
ringvote-admin = "ringvote.cli.admin:cli"

[project.urls]
"Homepage" = "https://github.com/MtCelesteMa/ringvote"
"Bug Tracker" = "https://github.com/MtCelesteMa/ringvote/issues"
